--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,14 @@
 .home {
 
+  header {
+    border-bottom: 2px dashed @navigation-border;
+    padding-bottom: 1rem;
+    
+    h2 {
+      margin-top: 1.2rem;
+    }
+  }
+  
   .content-section {
     margin: 30px 0;
     display: flex;
