--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,37 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+a {
+  text-decoration: none;
+  color: black;
+}
+nav {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-end;
+  align-items: center;
+  border-bottom: 2px dashed #C0C0C0;
+  padding: 2rem 0;
+}
+nav .nav-container {
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+nav .nav-container .links {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 1.8rem;
+}
+nav .nav-container .links a {
+  padding: 0 1.5rem;
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
