--- a/css/index.css
+++ b/css/index.css
@@ -263,3 +263,12 @@ nav .nav-container .links a {
   width: 30%;
   margin-bottom: 30px;
 }
+.home .content-pick .destination .btn {
+  width: 100%;
+  background-color: #008080;
+  color: #FFFFFF;
+  font-size: 2.2rem;
+  text-align: center;
+  padding: 1rem 0;
+  border-radius: 1rem;
+}
