--- a/less/mixins.less
+++ b/less/mixins.less
@@ -8,3 +8,13 @@
 .nav-border() {
     border-bottom: 2px dashed @navigation-border;
 }
+
+.custom-btn(@width: 100%, @font-size: 2.2rem, @bg-color: @button-bg, @color: @white) {
+    width: @width;
+    background-color: @bg-color;
+    color: @color;
+    font-size: @font-size;
+    text-align: center;
+    padding: 1rem 0;
+    border-radius: 1rem;
+}
