--- a/less/variables.less
+++ b/less/variables.less
@@ -12,3 +12,7 @@
 @shark: #212529;
 @eastern-blue: #008080;
 @sandy-beach: #FFEBCD;
+
+// Fonts
+@main-font: 'Roboto', sans-serif;
+@h-font: 'Indie Flower', cursive;
