--- a/less/navigation.less
+++ b/less/navigation.less
@@ -16,6 +16,15 @@ nav {
             a {
                 padding: 0 1.5rem;
             }
+
+            @media @mobile {
+                margin-top: 1rem;
+                width: 100%;
+            }
+        }
+
+        @media @mobile {
+            .flex(column, nowrap, center, center);
         }
     }
 }
