--- a/less/variables.less
+++ b/less/variables.less
@@ -16,3 +16,6 @@
 // Fonts
 @main-font: 'Roboto', sans-serif;
 @h-font: 'Indie Flower', cursive;
+
+// Media Queries
+@mobile: ~"(max-width: 500px)";
