--- a/css/index.css
+++ b/css/index.css
@@ -197,7 +197,15 @@ nav .nav-container .links {
   font-size: 1.8rem;
 }
 nav .nav-container .links a {
-  padding: 0 1.5rem;
+  padding: 1.5rem;
+}
+nav .nav-container .links a:nth-child(odd):hover {
+  transform: translateY(0.5rem);
+  transition: transform 0.5s;
+}
+nav .nav-container .links a:nth-child(even):hover {
+  transform: translateY(-0.5rem);
+  transition: transform 0.5s;
 }
 @media (max-width: 500px) {
   nav .nav-container .links {
@@ -311,6 +319,7 @@ nav .nav-container .links a {
   text-align: center;
   padding: 1rem 0;
   border-radius: 1rem;
+  border: none;
 }
 @media (max-width: 500px) {
   .home .content-pick .destination {
