--- a/less/mixins.less
+++ b/less/mixins.less
@@ -17,4 +17,10 @@
     text-align: center;
     padding: 1rem 0;
     border-radius: 1rem;
+    border: none;
+}
+
+.animate-up-down(@trans-y: -0.5rem, @duration: 0.5s) {
+    transform: translateY(@trans-y);
+    transition: transform @duration;
 }
